@@ -1,3 +1,9 @@
+2000-09-28  John David Anglin <dave@hiauly1.hia.nrc.ca>
+
+	* som.c: Include alloca-conf.h.
+	* Makefile.am: "make dep-am"
+	* Makefile.in: Regenerate.
+
 2000-09-27  Alan Modra  <alan@linuxcare.com.au>
 
 	* elf32-hppa.c (plt_stub): New.
